# NIDS_MFOTL

./: .gitattributes  .gitignore  README.md  dune  dune-project  monpoly-tools.opam  monpoly.opam
NIDS/: attack_signatures.xlsx
release-performance-evaluation/: generate-asymptotic-experiments.py  log-generator.py  measurements-0.csv  measurements.csv
src/: MFOTL.ml  MFOTL.mli  aggreg.ml  aggreg.mli  algorithm.ml  algorithm_verified.ml  extformula.ml  extformula.mli  filter_empty_tp.ml  filter_rel.ml  formula_lexer.mll  formula_parser.mly  helper.ml  helper.mli  log_parser.ml  log_parser.mli  main.ml  marshalling.ml  mformula.ml  mformula.mli  misc.ml  misc.mli  optimized_mtl.ml  optimized_mtl.mli  relation.ml  relation.mli  rewriting.ml  splitting.ml  verified.ml  verified_adapter.ml
thys/: ROOTS
tools/: formula_stats.ml  join_test.ml
trigger-performance-evaluation/: asymptotic-plot-generator-rewritten.py  asymptotic-plot-generator.py  asymptotic-table-generator-rewritten.py  asymptotic-table-generator.py  formula-generator.py  generate-asymptotic-experiments.py  generate-experiments.py  generate-logs.sh  log-generator.py  measure-asymptotic.sh  measure-single-asymptotic.sh  measure-single.sh  measure.sh  measurements-1-10.csv  measurements-1-12.csv  measurements-11-20.csv  measurements-13-21.csv  measurements-21-30.csv  measurements-22-30.csv  measurements-asymptotic-constant-interval.csv  measurements-asymptotic-fraction-interval.csv  measurements-asymptotic-rewritten-0.csv  measurements-asymptotic-rewritten-a.csv  measurements-asymptotic-rewritten.csv  (+6 more)
(+72 files in other folders)
